--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,3 +59,4 @@ taskify-android-application = { id = "taskify.android.application", version = "u
 taskify-android-application-compose = { id = "taskify.android.application.compose", version = "unspecified" }
 taskify-android-library = { id = "taskify.android.library", version = "unspecified" }
 taskify-android-library-compose = { id = "taskify.android.library.compose", version = "unspecified" }
+taskify-android-feature = { id = "taskify.android.feature", version = "unspecified" }
