--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ adaptive = "1.0.0"
 agp = "8.7.3"
 androidxDataStore = "1.1.1"
 androidxHiltNavigationCompose = "1.2.0"
+coreSplashscreen = "1.0.1"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 hilt = "2.53.1"
@@ -39,6 +40,7 @@ media3CommonKtx = "1.5.1"
 [libraries]
 androidx-adaptive = { module = "androidx.compose.material3.adaptive:adaptive", version.ref = "adaptive" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigation" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
