--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,4 @@
+# TODO update gradle & AGP version
 #Tue Dec 10 21:22:37 WIB 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
