--- a/core/notification/src/main/AndroidManifest.xml
+++ b/core/notification/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <application>
-        <receiver android:name="com.nrr.notification.receiver.ScheduledTaskReceiver" />
+        <receiver android:name="com.nrr.notification.receiver.ScheduledTaskReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.nrr.notification.TASK_REMINDER" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
