Update SequentialScheduledTaskReceiver manifest registration

--- a/core/notification/src/main/AndroidManifest.xml
+++ b/core/notification/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         </receiver>
         <receiver android:name="com.nrr.notification.receiver.SequentialScheduledTaskReceiver"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="com.nrr.notification.SEQUENTIAL_TASK_REMINDER" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
