--- a/core/notification/src/main/AndroidManifest.xml
+++ b/core/notification/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <application>
-        <receiver android:name="com.nrr.notification.receiver.ScheduledTaskReceiver"
+        <receiver android:name="com.nrr.notification.receiver.TaskReminderReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
