--- a/core/notification/src/main/AndroidManifest.xml
+++ b/core/notification/src/main/AndroidManifest.xml
@@ -3,27 +3,34 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <application>
-        <receiver android:name="com.nrr.notification.receiver.TaskReminderReceiver"
+        <receiver android:name="com.nrr.notification.receiver.SequentialTaskNotifierReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.nrr.notification.TASK_REMINDER" />
+                <action android:name="com.nrr.notification.SEQUENTIAL_TASK_NOTIFIER" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.nrr.notification.receiver.RemindLaterReceiver"
+        <receiver android:name="com.nrr.notification.receiver.RemindLaterSchedulerReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.nrr.notification.REMIND_LATER" />
+                <action android:name="com.nrr.notification.REMIND_LATER_SCHEDULER" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.nrr.notification.receiver.SequentialScheduledTaskReceiver"
+        <receiver android:name="com.nrr.notification.receiver.SequentialTaskSchedulerReceiver"
             android:enabled="true"
             android:exported="false"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
-                <action android:name="com.nrr.notification.SEQUENTIAL_TASK_REMINDER" />
+                <action android:name="com.nrr.notification.SEQUENTIAL_TASK_SCHEDULER" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="com.nrr.notification.receiver.SimpleTaskNotifierReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.nrr.notification.SIMPLE_TASK_NOTIFIER" />
             </intent-filter>
         </receiver>
     </application>
