--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ androidxDataStore = "1.1.2"
 androidxHiltNavigationCompose = "1.2.0"
 coreSplashscreen = "1.0.1"
 gson = "2.11.0"
+javaxInject = "1"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 hilt = "2.55"
@@ -51,6 +52,7 @@ androidx-test-rules = { module = "androidx.test:rules", version.ref = "rules" }
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 androidx-work-testing = { module = "androidx.work:work-testing", version.ref = "workRuntimeKtx" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
