--- a/summary/src/main/AndroidManifest.xml
+++ b/summary/src/main/AndroidManifest.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <application>
+        <receiver android:name="com.nrr.summary.receiver.SummaryGenerationReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.nrr.summary.SUMMARY_GENERATION" />
+            </intent-filter>
+        </receiver>
+    </application>
 </manifest>
