Handle summaries generation scheduling for APi level 24-25 for DailySchedule

--- a/summary/src/main/AndroidManifest.xml
+++ b/summary/src/main/AndroidManifest.xml
@@ -9,5 +9,12 @@
                 <action android:name="com.nrr.summary.SUMMARY_GENERATION" />
             </intent-filter>
         </receiver>
+        <receiver android:name="com.nrr.summary.receiver.SummariesGenerationReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.nrr.summary.SUMMARIES_GENERATION" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
